fixed layout issues

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -56,15 +56,16 @@ h1
         color: #333
         margin-left: 17px
         font-weight: bold
-        text-align: center
         background: #FFF
         -moz-appearance: none
         -webkit-appearance: none
         appearance: none
         background: url('../images/arrow.png')
         background-repeat: no-repeat
-        background-position-x: 88%
+        background-position-x: 97%
         background-position-y: 56%
+        width: 100%
+        margin-left: 0
 #global
     text-align: center
     display: flex
